# S2sModelRunner

./: CMakeLists.txt  c_api.cpp  c_api.h  get_dependencies.sh  io_map.cpp  io_map.h  model_runner.cpp  model_runner.h  test.cpp
